welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: '(' expected but identifier found.
if estFaceMur()==false{
   ^Runner:12: error: illegal start of simple expression
	}
        ^